<resources>
    <string name="app_name">Descarte Inteligente</string>
    <string name="tv_email">Nome de usuário ou email</string>
    <string name="tv_senha">Senha</string>
    <string name="btn_acessar">Acessar</string>
    <string name="btn_facebook_login">Acessar com FACEBOOK</string>
    <string name="btn_google_login">Acessar com GOOGLE</string>
    <string name="tv_selecionar_material">Selecione o material a ser descartado</string>
    <string name="novo_usuario">Novo Usuário</string>
    <string name="email">E-mail</string>
    <string name="msg_login_info_obrigatorio">Email e senha devem ser informados</string>
    <string name="msg_erro_login">Erro ao fazer login</string>
    <string name="msg_login_invalido">Email ou senha inválidos</string>
    <string name="ou">ou</string>
    <string name="facebook_app_id">422888631868362</string>
</resources>
